@@ -1,3 +1,7 @@
-Ali Abdallah aliov@xfce.org
+Ali Abdallah 		aliov@xfce.org
 
-Special Thanks to Fabian Nowak.
+Special Thanks to:
+------------------
+* Yves-Alexis Perez 	corsac@debian.org.
+* Mike Masonnet 	mmassonnet@xfce.org.
+* Fabian Nowak 		timystery@arcor.de.
