@@ -1,3 +1,8 @@
+2009-06-04: 15:00 Ali aliov@xfce.org
+	*: Use the channel in the private data.
+	*: Don't show popup message if xfmp is already running and
+	a new instance is trying to load for some reason.
+
 2009-06-04: 12:00 Ali aliov@xfce.org
 	*: Reset the idle counter when we switch from battery to AC and vise versa.
 
